--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"fzaninotto/faker": "1.4.*@dev",
-		"way/generators": "1.0.*@dev"
+		"way/generators": "1.0.*@dev",
+		"league/fractal": "0.6.*",
+		"itsgoingd/clockwork": "dev-master",
+		"behat/behat": "2.4.*@stable"
 	},
 	"autoload": {
 		"classmap": [
@@ -16,7 +19,10 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+		"psr-0": {
+			"Jeopardy": "app/"
+		}
 	},
 	"scripts": {
 		"post-install-cmd": [
@@ -31,7 +37,8 @@
 		]
 	},
 	"config": {
-		"preferred-install": "dist"
+		"preferred-install": "dist",
+		"bin-dir": "bin/"
 	},
 	"minimum-stability": "dev"
 }
