--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,15 @@
 		"fzaninotto/faker": "1.4.*@dev",
 		"way/generators": "1.0.*@dev",
 		"league/fractal": "0.6.*",
-		"itsgoingd/clockwork": "dev-master",
-		"behat/behat": "2.4.*@stable"
+		"itsgoingd/clockwork": "dev-master"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "3.7.*@dev",
+		"guzzle/guzzle": "v3.8.0",
+		"behat/behat": "2.5.*@stable",
+		"behat/mink": "1.5.*@stable",
+		"behat/mink-extension": "*",
+		"behat/mink-goutte-driver": "*"
 	},
 	"autoload": {
 		"classmap": [
@@ -37,8 +44,7 @@
 		]
 	},
 	"config": {
-		"preferred-install": "dist",
-		"bin-dir": "bin/"
+		"preferred-install": "dist"
 	},
 	"minimum-stability": "dev"
 }
