--- a/fortrabbit.yml
+++ b/fortrabbit.yml
@@ -2,8 +2,4 @@
 version: 1
 composer:
     mode: always
-    method: install
-post-deploy:
-    script: artisan
-    args:
-        - migrate
+    method: update
